# Sika

./: .gitignore  BUILD_REPORT.md  LICENSE  PROJECT_TREE.txt  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
src/: main.tsx
src-tauri/: Cargo.lock.backup  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: fonts.rs  lib.rs  main.rs
src/app/: App.css  App.tsx
src/components/: ExportProgressDialog.tsx  NameInputPanel.tsx  NameList.tsx  PageSettingsPanel.tsx  PreviewPanel.tsx  SettingsPanel.tsx  StatusBar.tsx  StyleSettingsPanel.tsx  Toast.tsx  TopToolbar.tsx
src/features/export/: docxExporter.ts  exportPeople.ts  exportTypes.ts  pngRenderer.ts  pptxExporter.ts  saveBinaryFile.ts  svgRenderer.ts
src/features/layout/: autoFitText.ts  layoutEngine.ts  paperPresets.ts  sceneTypes.ts
src/features/names/: nameTypes.ts  parseNames.ts
src/features/preview/: ScenePreview.tsx
src/features/print/: printService.ts
src/hooks/: useSystemFonts.ts
src/store/: persistence.ts  useProjectStore.ts
src/tests/: app.test.tsx  exportPeople.test.ts  fileNames.test.ts  layout.test.ts  names.test.ts  officeExport.test.ts  persistence.test.ts  printService.test.ts  selectControls.test.tsx  units.test.ts  validation.test.ts
src/utils/: errors.ts  fileNames.ts  units.ts  validation.ts
