[package]
name = "batch-place-card-generator"
version = "0.1.0"
description = "Offline Windows desktop application for generating printable place cards in batches"
authors = ["Batch Place Card Generator contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "batch_place_card_generator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
fontdb = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
